--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -55,3 +55,7 @@ management.servlet.context-path=/manage
 management.health.db.enabled=true
 management.health.default.enabled=true
 management.health.diskspace.enabled=true
+
+#File
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
