S05P12C103-73 feat : [BE] 파일 업로드 서비스 생성

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -57,5 +57,7 @@ management.health.default.enabled=true
 management.health.diskspace.enabled=true
 
 #File
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+upload.path=/uploads/
