S05P12C103-73 feat : [BE] 파일 업로드 테스트

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -60,4 +60,4 @@ management.health.diskspace.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-upload.path=/uploads/
+uploads=/uploads/
