--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.resources.add-mappings=false
 pringfox.documentation.swagger.use-model-v3=false
 
 #database
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.jpa.hibernate.ddl-auto=update
@@ -43,6 +45,8 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.apache.tiles=INFO
 logging.level.org.sringframework.boot=DEBUG
 logging.level.org.sringframework.security=DEBUG
+logging.level.org.hibernate.SQL = debug
+logging.level.org.hibernate.type.descriptor.sql = trace
 
 spring.devtools.livereload.enabled=true
 
