--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -184,6 +184,10 @@ dependencies {
     implementation("org.projectlombok:lombok:1.18.20")
     annotationProcessor("org.projectlombok:lombok:1.18.20")
 
+    // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
+    implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.7'
+
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
