--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "sockjs-client": "^1.5.1",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "webstomp-client": "^1.2.6"
