--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -127,6 +127,7 @@ processResources {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-websocket")
+    implementation("org.springframework.boot:spring-boot-starter-freemarker")
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
@@ -147,6 +148,10 @@ dependencies {
     //STOMP 웹소캣 서버 사이드 테스트를 위한 의존성 추가
     implementation("org.springframework.boot:spring-boot-starter-mustache")
     //STOMP 관련 프론트 라이브러리
+    implementation('org.webjars.bower:bootstrap:4.3.1')
+    implementation('org.webjars.bower:vue:2.5.16')
+    implementation('org.webjars.bower:axios:0.17.1')
+    implementation('com.google.code.gson:gson:2.8.0')
     implementation('org.webjars.bower:jquery:3.3.1')
     implementation('org.webjars:sockjs-client:1.1.2')
     implementation('org.webjars:stomp-websocket:2.3.3-1')
