--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "sockjs-client": "^1.5.1",
+    "swiper": "^6.8.1",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
