--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "openvidu-browser": "^2.19.0",
     "sockjs-client": "^1.5.1",
     "swiper": "^6.8.1",
     "vue": "^2.6.14",
