--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "openvidu-browser": "^2.19.0",
     "sockjs-client": "^1.5.1",
+    "sweetalert": "^2.1.2",
     "swiper": "^6.8.1",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
