--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "swiper": "^6.8.1",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
+    "vuebar": "0.0.20",
     "vuex": "^3.4.0",
     "webstomp-client": "^1.2.6"
   },
