--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -65,3 +65,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 uploads=/uploads/
+
+security.headers.frame=false
