--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,vue,vuejs
+
+
+docs/video
