--- a/.gitignore
+++ b/.gitignore
@@ -130,4 +130,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,vue,vuejs
 
 
-docs/video
+docs/video/
